<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="sync">Sync</string>
    <string name="settings">Settings</string>
    <string name="sortnote">Sort note</string>
    <string name="insert_timestamp">Insert timestamp</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="unlink">Unlink</string> <!-- Unlink from Dropbox -->
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <!-- "new" is reserved -->
    <string name="set">Set</string>
    <string name="not_now">Not now</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="remove_notebook_link">Remove link</string>
    <string name="browse">Browse</string>
    <string name="dropbox">Dropbox</string>
    <string name="delete">Delete</string>
    <string name="delete_with_quoted_argument">Delete “%s”</string>
    <string name="delete_amount_of_books">Delete %d notebooks</string>
    <string name="name">Name</string>
    <string name="query">Query</string>
    <string name="done">Done</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="mark_as_done_with_repeater">Reschedule %s</string>
    <string name="reminder_snooze">Snooze</string>
    <string name="import_">Import</string> <!-- Reserved keyword -->
...
    <string name="states">States</string>
    <string name="note">Note</string>
    <string name="property">Property</string>
    <string name="import_as">Import as…</string>
    <string name="new_notebook">New notebook</string>
    <string name="new_folder">New folder</string>
    <string name="scheduled">Scheduled</string>
    <string name="agenda">Agenda</string>
    <string name="state">State</string>
    <string name="priority">Priority</string>
    <string name="open">Open</string>
    <string name="widget">Widget</string>
    <string name="event">Event</string>

    <plurals name="notes_cut">
...
    <string name="ssh_show_public_key_preference_title">View generated SSH public key</string>
    <string name="message_book_has_no_link">Notebook has no repository link</string>
    <string name="message_note_created">Note created</string>
    <string name="drawer_close">Close drawer</string>
    <string name="drawer_open">Open drawer</string>

    <string name="schedule">Schedule</string>
    <string name="refile">Refile</string>
    <string name="deadline">Deadline</string>
    <string name="closed">Closed</string>

    <!-- TODO: Not hints, rename -->
    <string name="schedule_button_hint">Scheduled time</string>
...

    <string name="books_context_menu_item_rename">Rename</string>
    <string name="books_context_menu_item_set_link">Set Link</string>
    <string name="books_context_menu_item_force_save">Force Save</string>
    <string name="books_context_menu_item_force_load">Force Load</string>

    <string name="move">Move</string>

    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>

    <string name="heads_action_menu_item_paste_above">Paste above</string>
    <string name="heads_action_menu_item_paste_under">Paste under</string>
    <string name="heads_action_menu_item_paste_below">Paste below</string>
    <string name="heads_moving_action_menu_item_promote">Promote</string>
    <string name="heads_moving_action_menu_item_down">Down</string>
    <string name="heads_moving_action_menu_item_up">Up</string>
    <string name="heads_moving_action_menu_item_demote">Demote</string>
    <string name="new_note">New note</string>
...

    <string name="notes_update_needed_dialog_title">Preference affects notes</string>
    <string name="notes_update_needed_dialog_message">Update notes to reflect the changes?</string>

    <string name="updating_notes">Updating notes…</string>

    <string name="no_notes_found_after_search">Your search did not match any notes</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="next_week">Next Week</string>

    <string name="tags">Tags</string>
    <string name="book_mtime">Notebook modification time</string>
    <string name="book_link">Notebook link</string>
    <string name="book_link_details">Notebook link details</string>
    <string name="book_last_action">Notebook last action</string>
    <string name="book_notes_count">Notes count</string>
    <string name="pref_title_notebooks">Notes &amp; Notebooks</string>
    <string name="notebook">Notebook</string>
    <string name="notebooks">Notebooks</string>
    <string name="searches">Searches</string>
    <string name="search">Search</string>
    <string name="multiple_repos">Multiple repositories exist</string>
    <string name="no_repos">No repositories configured</string>
    <string name="no_books">No notebooks found</string>

    <string name="book_encoding">Notebook\'s encoding</string>
    <string name="collecting_notebooks_in_progress">Collecting notebooks…</string>
...

    <string name="cycle_visibility">Fold/Unfold All</string>
    <string name="widen_view">Widen View</string>
    <string name="narrow">Narrow to Subtree</string>
    <string name="note_has_been_modified">Note modified</string>
    <string name="discard_or_save_changes">Save changes?</string>
    <string name="rename">Rename</string>
    <string name="rename_book">Rename %s</string>
    <string name="failed_renaming_book">Failed renaming notebook</string>
    <string name="failed_renaming_book_with_reason">Renaming failed: %s</string>
    <string name="renamed_book_from">Renamed from “%s”</string>

    <string name="also_delete_linked_book">Delete linked remote notebook</string>
...
