...
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ViewFlipper
            android:id="@+id/fragment_query_search_view_flipper"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar style="@style/LoadingProgressBar" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_query_search_recycler_view"
                style="@style/FastScroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="?attr/actionBarSize"
                android:paddingBottom="@dimen/fragment_query_bottom_padding"
                android:clipToPadding="false" />
...
    <!-- Top toolbar -->
    <!-- TODO: DRY -->
    <com.google.android.material.appbar.AppBarLayout
        style="@style/AppBarLayoutStyle">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_toolbar"
            style="@style/TopToolbar"
            app:navigationIcon="@drawable/ic_menu" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/sync_toolbar_progress"
            style="@style/SyncProgressIndicator" />
...
